--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/petercastle2020/Worries#readme",
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.3",
     "body-parser": "^1.19.0",
     "bootstrap-icons": "^1.4.1",
     "ejs": "^3.1.6",
