--- a/package.json
+++ b/package.json
@@ -20,8 +20,13 @@
     "@fortawesome/fontawesome-free": "^5.15.3",
     "body-parser": "^1.19.0",
     "bootstrap-icons": "^1.4.1",
+    "dotenv": "^10.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
-    "mongoose": "^5.12.7"
+    "express-session": "^1.17.2",
+    "mongoose": "^5.12.7",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^6.1.0"
   }
 }
