--- a/package.json
+++ b/package.json
@@ -21,10 +21,11 @@
     "@fortawesome/fontawesome-free": "^5.15.3",
     "body-parser": "^1.19.0",
     "bootstrap-icons": "^1.4.1",
-    "cookie-session": "^2.0.0",
+    "connect-mongo": "^4.6.0",
     "dotenv": "^10.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
+    "express-session": "^1.17.2",
     "mongoose": "^5.12.7",
     "mongoose-findorcreate": "^3.0.0",
     "passport": "^0.4.1",
